# marmolada

./: .coveragerc  .gitignore  LICENSE.MIT  README.md  alembic.ini  pyproject.toml  renovate.json  tox.ini
.github/workflows/: main.yaml
containers/: Containerfile.api  Containerfile.base  Containerfile.db  Containerfile.db-chores  Containerfile.redis  Containerfile.tasks  compose-build-images.yaml  compose-db-migration.yaml  compose-db-setup.yaml  compose-run.yaml
etc/marmolada/: config-example.yaml
marmolada/: version.py
marmolada/api/: __init__.py  _compat.py  artifacts.py  base.py  cli.py  database.py  imports.py  main.py  schemas.py  tags.py
marmolada/core/: cli.py  util.py
marmolada/core/configuration/: __init__.py  main.py  validation.py
marmolada/database/: __init__.py  cli.py  main.py  mixins.py  setup.py  util.py
marmolada/database/migrations/: __init__.py  env.py  main.py
marmolada/database/model/: __init__.py  artifact.py  language.py  metadata.py  tag.py  task.py
marmolada/database/types/: __init__.py  enum.py  path.py  tzdatetime.py
marmolada/tasks/: __init__.py  base.py  cli.py  main.py  typing.py
marmolada/tasks/plugins/: __init__.py  base.py
marmolada/tasks/plugins/artifacts/: file_type.py
tests/: conftest.py  test_version.py
tests/api/: conftest.py  test_artifacts.py  test_cli.py  test_database.py  test_imports.py  test_main.py  test_schemas.py  test_tags.py
tests/core/: test_cli.py  test_configuration.py  test_util.py
tests/database/: conftest.py  test_cli.py  test_main.py  test_migrations.py  test_mixins.py  test_setup.py  test_types.py  test_util.py
tests/database/model/: common.py  test_artifact.py  test_language.py  test_metadata.py  test_tag.py
tests/database/types/: test_enum.py
tests/tasks/: test_base.py  test_cli.py  test_main.py
tests/tasks/plugins/: test_base.py
tests/tasks/plugins/artifacts/: test_file_type.py
