[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "marmolada"
version = "0.1.0"
description = ""
authors = [
    {name = "Nils Philippsen", email = "nils@tiptoe.de"}
]
requires-python = ">= 3.12,<4.0"

dependencies = [
    "PyYAML>=6.0,<7",
    "anyio >=4.3.0,<5",
    "click >=8.0.3,<9",
    "click-plugins >=1.1.1,<2",
    "pydantic >=2.5.3,<3",
    "pydantic-settings >=2.3.4,<3"
]

[project.optional-dependencies]
api = [
    "arq >=0.25.0,<0.27.0",
    "asyncpg >=0.27.0,<0.31.0",
    "fastapi >=0.95,<0.116",
    "fastapi-pagination[asyncpg,sqlalchemy] >=0.12.17,<0.13.0",
    "greenlet >=3.0.0rc,<4",
    "psycopg2 >=2.9.6,<3",
    "python-multipart >=0.0.6,<0.0.21",
    "sqlalchemy >=2.0.13,<3",
    "uvicorn >=0.16,<0.35"
]
database = [
    "alembic >=1.7.5,<2",
    "asyncpg >=0.27.0,<0.31.0",
    "greenlet >=3.0.0rc,<4",
    "psycopg2 >=2.9.6,<3",
    "sqlalchemy >=2.0.13,<3"
]
tasks = [
    "arq >=0.25.0,<0.27.0",
    "asyncpg >=0.27.0,<0.31.0",
    "psycopg2 >=2.9.6,<3",
    "pyxdg >=0.28,<0.29",
    "sqlalchemy >=2.0.13,<3"
]

[tool.poetry.group.dev.dependencies]
black = "^22 || ^23 || ^24.0.0"
coverage = "^7.4.1"
httpx = "^0.21 || ^0.22 || ^0.23 || ^0.24 || ^0.25 || ^0.26 || ^0.27.0 || ^0.28.0"
pillow = "^10.4.0 || ^11.0.0"
psycopg = "^3.1.9"
pytest = "^5.2 || ^6 || ^7 || ^8.0.0"
pytest-asyncio = "^0.16.0 || ^0.17.0 || ^0.18.0 || ^0.19.0 || ^0.20.0 || ^0.21.0 || ^0.22.0 || ^0.23.0 || ^0.24.0 || ^0.25.0"
pytest-cov = "^3.0.0 || ^4.0.0 || ^5.0.0 || ^6.0.0"
pytest-postgresql = "^5.0.0 || ^6.0.0"
pytest-xdist = "^3.5.0"
ruff = "^0.2.0 || ^0.3.0 || ^0.4.0 || ^0.5.0 || ^0.6.0 || ^0.7.0 || ^0.8.0"
toml = "^0.10.2"
tox = "^3.24.4 || ^4"

[project.scripts]
marmolada = "marmolada.core.cli:cli"

[project.entry-points."marmolada.cli"]
"api" = "marmolada.api.cli:api"
"database" = "marmolada.database.cli:database"
"tasks" = "marmolada.tasks.cli:tasks"

[project.entry-points."marmolada.tasks"]
"artifacts/file-type" = "marmolada.tasks.plugins.artifacts.file_type"

[tool.pytest.ini_options]
addopts = "--cov --cov-config .coveragerc --cov-report term --cov-report xml --cov-report html"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "RUF"]
ignore = ["UP038"]
allowed-confusables = ["’"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "RUF012"]
"**/__init__.py" = ["F401"]

# Kept around, keep in sync with ruff
[tool.isort]
line_length = 100
profile = "black"
