[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marmolada"
version = "0.1.0"
description = ""
authors = [
    {name = "Nils Philippsen", email = "nils@tiptoe.de"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "PyYAML<7.0,>=6.0",
    "click<9.0.0,>=8.0.3",
    "click-plugins<2.0.0,>=1.1.1",
    "pydantic<3.0.0,>=2.5.3",
    "anyio<5.0.0,>=4.3.0",
    "pydantic-settings<3.0.0,>=2.3.4",
]

[dependency-groups]
dev = [
    "pytest<9.1.0,>=5.2.0",
    "pytest-cov<7.0.1,>=3.0.0",
    "tox<5.0.0,>=3.24.4",
    "httpx<0.29.0,>=0.21.0",
    "pytest-asyncio<1.3.1,>=0.16.0",
    "ruff<0.15.2,>=0.13.0",
    "toml<0.11.0,>=0.10.2",
    "psycopg<4.0.0,>=3.1.9",
    "pytest-postgresql<8.0.1,>=5.0.0",
    "coverage<8.0.0,>=7.4.1",
    "pytest-xdist<4.0.0,>=3.5.0",
    "pillow<12.2.0,>=10.4.0",
]

[project.optional-dependencies]
api = [
    "fastapi<0.130,>=0.95",
    "uvicorn<0.42,>=0.16",
    "python-multipart<0.0.23,>=0.0.6",
    "SQLAlchemy<3.0.0,>=2.0.13",
    "greenlet<4.0.0,>=3.0.0rc",
    "psycopg2<3.0.0,>=2.9.6",
    "asyncpg<0.31.1,>=0.27.0",
    "fastapi-pagination[asyncpg,sqlalchemy]<0.15.11,>=0.13.0",
    "taskiq<0.13,>=0.11.20",
    "taskiq-redis>=1.1.2",
    "taskiq-fastapi>=0.3.6",
]
database = ["alembic<2.0.0,>=1.7.5"]
tasks = [
    "pyxdg<0.29.0,>=0.28.0",
    "taskiq-redis>=1.1.2",
]

[project.scripts]
marmolada = "marmolada.core.cli:cli"

[project.entry-points."marmolada.cli"]
api = "marmolada.api.cli:api"
database = "marmolada.database.cli:database"
tasks = "marmolada.tasks.cli:tasks"

[project.entry-points."marmolada.tasks"]
"artifacts/file-type" = "marmolada.tasks.plugins.artifacts.file_type"

[tool.uv]
default-groups = []

[tool.pytest.ini_options]
addopts = "--cov --cov-config .coveragerc --cov-report term --cov-report xml --cov-report html"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "RUF"]
ignore = []
allowed-confusables = ["’"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "RUF012"]
"**/__init__.py" = ["F401"]
